--- a/page4.html
+++ b/page4.html
@@ -9,53 +9,77 @@
     <link rel="stylesheet" href="script.js" />
   </head>
   <body>
+
+    <button onclick="openModal()">
+      Abrir 
+    </button>
+
+    
     <a href="/">Tela inicial</a>
     <a href="/page4.html" aria-current="page"></a>
+
+
+    <div class="conteiner5">
+      <div>
+        
+        <dialog>
+          <img src="tela-inicial.png" alt="modal" />
+          <button onclick="closeModal()">
+          fechar
+          </button>
+        </dialog>
+      </div>
+    </div>
 
     <h1>Desenvolvedores do Jogo</h1>
     <div class="container4">
       <div class="card">
-        <img src="" alt="" />
+
+        <img src="emily.jpg" alt="" />
 
         <h3>Emily</h3>
-        <div class="info">Turma:2003 Programadora</div>
+        <div class="info">Turma:2003 Programadora
+          <p></p>
+        </div>
       </div>
 
       <div class="card">
-        <img src="" alt="" />
-
-        <h3>Yasmim</h3>
-        <div class="info">Turma:2003 Programadora</div>
-      </div>
-
-      <div class="card">
-        <img src="" alt="" />
+        <img src="julia.jpg" alt="" />
 
         <h3>Julia</h3>
-        <div class="info">Turma:2003 Programadora</div>
+        <div class="info">Turma:2003 Programadora
+          <p></p>
+        </div>
       </div>
 
       <div class="card">
-        <img src="" alt="" />
+        <img src="sarah.jpg" alt="" />
 
         <h3>Sarah</h3>
-        <div class="info">Turma:2002 Multimidia</div>
+        <div class="info">Turma:2002 Multimidia
+          <p></p>
+        </div>
       </div>
 
       <div class="card">
-        <img src="" alt="" />
+        <img src="pedrog.jpg" alt="" />
 
         <h3>Pedro Gabriel</h3>
-        <div class="info">Turma:2001 Multimidia</div>
+        <div class="info">Turma:2001 Multimidia
+          <p></p>
+        </div>
       </div>
 
       <div class="card">
-        <img src="" alt="" />
+        <img src="mario1.png" alt="" />
 
         <h3>Guilherme</h3>
-        <div class="info">Turma:2001 Multimidia</div>
+        <div class="info">Turma:2001 Multimidia
+          <p></p>
+        </div>
       </div>
     </div>
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
