--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
     <h1>História Do Jogo</h1>
     <div class="conteiner2" id="Historia">
       <p>
-        José foi preso aos 18 anos por crimes que não cometeu. Agora, aos 25,
+        José foi preso aos 18 anos por crimes de furto um em comercios na cidade de São Paulo. Agora, aos 25,
         ele ganha uma chance de reduzir sua pena com serviço comunitário. Mas o
         mundo lá fora está diferente. Muito diferente. Enquanto cumpre sua
         tarefa em uma cidadezinha do interior de São Paulo, José enfrenta um
