--- a/page4.html
+++ b/page4.html
@@ -19,11 +19,9 @@
 
     <div class="conteiner5">
       <div>
-        <button onclick="openModal()">
-          Abrir 
-        </button>
+        
         <dialog>
-          <img src="tela-inicial.png" alt="modal" />
+          <img  src="fotoModal.jpg" alt="modal"  width="1000"/>
           <button onclick="closeModal()">
           fechar
           </button>
@@ -32,52 +30,57 @@
     </div>
 
     <h1>Desenvolvedores do Jogo</h1>
+
+    <button class="modal" onclick="openModal()">
+      <img  src="fotoModal.jpg" alt="modal"  width="100"/>
+    </button>
+
+
     <div class="container4">
+
       <div class="card">
-
         <img src="emily.jpg" alt="" />
-
         <h3>Emily</h3>
         <div class="info">Turma:2003 Programadora
-          <p></p>
+          <p>Criar um jogo desdeo começo foi uma experiência muito desafiadora e extressante,
+            pensei que iria conhecer jesus antes do tempo mas conseguimos finalizare e ter
+            um bom resultado.Gostei de ter trabalhado em equipe e faze esse jogo acontecer.         </p>
         </div>
       </div>
 
       <div class="card">
         <img src="julia.jpg" alt="" />
-
         <h3>Julia</h3>
         <div class="info">Turma:2003 Programadora
-          <p></p>
+          <p>Eu tive bastante dificuldade para fazer o jogo, pois nunca havia feito um jogo completo até chegar à oficina. No fim, deu certo. A minha experiência criando o jogo foi boa. Às vezes, eu conseguia fazer de primeira, mas, na maioria das vezes, eu me estressava por ter dificuldade. Achei que fazer esse jogo foi uma experiência positiva para ter uma ideia de como é, caso no futuro eu siga esse ramo.</p>
         </div>
       </div>
 
       <div class="card">
         <img src="sarah.jpg" alt="" />
-
         <h3>Sarah</h3>
         <div class="info">Turma:2002 Multimidia
-          <p></p>
+          <p>Fazer um jogo foi uma experiência muito legal e, ao mesmo tempo, desafiadora. Teve momentos em que deu raiva, porque algumas não davam certo,mas no fim valeu a pena.
+            Fazer o jogo me deu muito experiência e aprendizado.</p>
         </div>
       </div>
 
       <div class="card">
         <img src="pedrog.jpg" alt="" />
-
         <h3>Pedro Gabriel</h3>
         <div class="info">Turma:2001 Multimidia
-          <p></p>
+          <p>Desenvolver a história e desing do jogo, me deu um novo olhar para oq é a criatividade e criação, isso me mostrou o quão vasta pode ser a criação de um jogo, ate os jogos simples. Essa criação foi divertida e gratificante</p>
         </div>
       </div>
 
       <div class="card">
         <img src="mario1.png" alt="" />
-
         <h3>Guilherme</h3>
         <div class="info">Turma:2001 Multimidia
-          <p></p>
+          <p>Criar as artes desse jogo foi ótimo, é incrível ver ideias e imaginação se tornando reais e jogáveis. Eu espero que esse seja o primeiro de muitos jogos a vou desenhar, por mais desafiador que tenha sido; foi divertido e gratificante</p>
         </div>
       </div>
+      
     </div>
 
     <script src="script.js"></script>
